--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
   },
   "homepage": "https://github.com/pratik-ranpariya/jsonapi#readme",
   "dependencies": {
-    "@octokit/rest": "^20.0.2",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "node-fetch": "^2.6.1"
+  },
+  "devDependencies": {
+    "esm": "^3.2.25"
   }
 }
