--- a/package.json
+++ b/package.json
@@ -19,11 +19,8 @@
   "homepage": "https://github.com/pratik-ranpariya/jsonapi#readme",
   "dependencies": {
     "dotenv": "^16.4.5",
-    "express": "^4.18.2",
     "fs": "^0.0.1-security",
+    "node-cron": "^3.0.3",
     "node-fetch": "^2.6.1"
-  },
-  "devDependencies": {
-    "esm": "^3.2.25"
   }
 }
